--- a/package.json
+++ b/package.json
@@ -4,69 +4,73 @@
   "description": "Standardized application scripts and boilerplate for Front End applications",
   "main": "index.js",
   "engines": {
-    "node": ">=5.0.0",
-    "npm": "^3.0.0"
+    "node": "^6",
+    "npm": "^3"
   },
   "bin": {
+    "gen": "./cli.js",
     "ta-genesis:dev": "./bin/start-dev-server.js",
     "ta-genesis:compile": "./bin/compile.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "David Zukowski <david@zuko.me> (https://zuko.me)",
+  "author": "TechnologyAdvice <devteam@technologyadvice.com>",
   "license": "MIT",
   "dependencies": {
     "babel-core": "^6.3.15",
     "babel-loader": "^6.2.0",
-    "babel-plugin-add-module-exports": "^0.1.1",
-    "babel-plugin-react-transform": "^2.0.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-__coverage__": "^11.0.0",
+    "babel-plugin-lodash": "^3.2.9",
     "babel-plugin-transform-runtime": "^6.3.13",
     "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
-    "babel-preset-react-hmre": "^1.0.1",
     "babel-preset-stage-1": "^6.3.13",
     "babel-runtime": "^6.3.19",
     "chai": "^3.4.1",
     "chai-as-promised": "^5.1.0",
     "chai-enzyme": "^0.4.0",
-    "cheerio": "^0.20.0",
+    "chalk": "^1.1.3",
+    "circular-json": "^0.3.1",
     "connect-history-api-fallback": "^1.1.0",
     "css-loader": "^0.23.0",
     "cssnano": "^3.3.2",
     "debug": "^2.2.0",
     "dirty-chai": "^1.2.2",
     "enzyme": "^2.0.0",
-    "eslint-loader": "^1.1.1",
+    "eslint-config-ta": "^5.2.0",
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.0",
+    "figures": "^1.7.0",
     "file-loader": "^0.8.4",
+    "fs-promise": "^0.5.0",
     "html-webpack-plugin": "^2.7.1",
     "imports-loader": "^0.6.5",
-    "isparta-loader": "^2.0.0",
+    "interpret": "^1.0.1",
     "json-loader": "^0.5.4",
-    "karma": "^0.13.21",
+    "karma": "^1.3.0",
     "karma-coverage": "^0.5.0",
     "karma-mocha": "^0.2.0",
     "karma-mocha-reporter": "^2.0.0",
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-webpack-with-fast-source-maps": "^1.9.2",
+    "leven": "^2.0.0",
+    "liftoff": "^2.3.0",
+    "lodash": "latest",
     "mocha": "^2.2.5",
     "node-sass": "^3.3.3",
     "phantomjs-prebuilt": "^2.1.3",
     "postcss-loader": "^0.8.0",
-    "react-transform-catch-errors": "^1.0.2",
-    "react-transform-hmr": "^1.0.2",
-    "redbox-react": "^1.2.2",
     "sass-loader": "^3.0.0",
+    "semver": "^5.3.0",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
     "style-loader": "^0.13.0",
+    "v8flags": "^2.0.11",
     "webpack": "^1.12.14",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.6.0",
-    "yargs": "^4.6.0"
+    "yargs": "^6.0.0"
   }
 }
