--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "node-sass": "^3.3.3",
     "phantomjs-prebuilt": "^2.1.3",
     "postcss-loader": "^0.8.0",
+    "require-dir": "^0.3.1",
     "sass-loader": "^3.0.0",
     "semver": "^5.3.0",
     "sinon": "^1.17.3",
