--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "scripts": {
     "release:major": "ta-script npm/release.sh major",
     "release:minor": "ta-script npm/release.sh minor",
-    "release:patch": "ta-script npm/release.sh patch"
+    "release:patch": "ta-script npm/release.sh patch",
+    "postpublish": "greenkeeper-postpublish"
   },
   "author": "TechnologyAdvice <devteam@technologyadvice.com>",
   "license": "MIT",
@@ -75,6 +76,7 @@
     "yargs": "^6.0.0"
   },
   "devDependencies": {
+    "greenkeeper-postpublish": "^1.0.1",
     "ta-scripts": "^2.4.3"
   }
 }
