feat(package): include react and test utils (#5)

--- a/package.json
+++ b/package.json
@@ -78,5 +78,9 @@
   "devDependencies": {
     "greenkeeper-postpublish": "^1.0.1",
     "ta-scripts": "^2.4.3"
+  },
+  "peerDependencies": {
+    "react": ">=15",
+    "react-addons-test-utils": ">=15"
   }
 }
