--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "gen": "./cli.js"
   },
   "scripts": {
+    "test": "echo \"There are no tests\"",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "release:major": "ta-script npm/release.sh major",
     "release:minor": "ta-script npm/release.sh minor",
     "release:patch": "ta-script npm/release.sh patch",
