--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "node": "^6",
     "npm": "^3"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/TechnologyAdvice/genesis.git"
+  },
   "bin": {
     "gen": "./cli.js"
   },
