--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "yargs": "^6.3.0"
   },
   "devDependencies": {
+    "eslint": "^3.8.1",
     "greenkeeper-postpublish": "^1.0.1",
     "ta-scripts": "^2.5.2",
     "webpack-validator": "^2.2.9"
