--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "test:watch": "npm run test -- -w",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "release:major": "ta-script npm/release.sh major",
-    "release:minor": "ta-script npm/release.sh minor",
-    "release:patch": "ta-script npm/release.sh patch",
+    "release:major": "ta-script npm/release major",
+    "release:minor": "ta-script npm/release minor",
+    "release:patch": "ta-script npm/release patch",
     "postpublish": "greenkeeper-postpublish"
   },
   "author": "TechnologyAdvice <devteam@technologyadvice.com>",
