--- a/package.json
+++ b/package.json
@@ -50,12 +50,14 @@
     "debug": "^2.2.0",
     "dirty-chai": "^1.2.2",
     "enzyme": "^2.0.0",
+    "eslint": "^3.8.1",
     "eslint-config-ta": "^5.2.0",
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.0",
     "figures": "^2.0.0",
     "file-loader": "^0.9.0",
     "fs-promise": "^0.5.0",
+    "fs-readdir-recursive": "^1.0.0",
     "html-webpack-plugin": "^2.24.0",
     "imports-loader": "^0.6.5",
     "interpret": "^1.0.1",
@@ -84,8 +86,7 @@
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.6.0",
     "webpack-validator": "^2.2.9",
-    "yargs": "^6.3.0",
-    "eslint": "^3.8.1"
+    "yargs": "^6.3.0"
   },
   "devDependencies": {
     "greenkeeper-postpublish": "^1.0.1",
