--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
     "style-loader": "^0.13.0",
+    "update-notifier": "^1.0.2",
     "v8flags": "^2.0.11",
     "webpack": "^1.13.3",
     "webpack-dev-middleware": "^1.6.1",
