--- a/package.json
+++ b/package.json
@@ -7,6 +7,13 @@
     "node": "^6",
     "npm": "^3"
   },
+  "files": [
+    "bin",
+    "commands",
+    "lib",
+    "index.js",
+    "cli.js"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/TechnologyAdvice/genesis.git"
