--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
   "files": [
     "bin",
     "commands",
-    "lib",
-    "index.js",
-    "cli.js"
+    "utils"
   ],
   "repository": {
     "type": "git",
@@ -32,78 +30,24 @@
   },
   "author": "TechnologyAdvice <devteam@technologyadvice.com>",
   "license": "MIT",
-  "dependencies": {
-    "babel-core": "^6.18.0",
-    "babel-loader": "^6.2.0",
-    "babel-plugin-__coverage__": "^11.0.0",
-    "babel-plugin-lodash": "^3.2.10",
-    "babel-plugin-transform-react-constant-elements": "^6.9.1",
-    "babel-plugin-transform-react-remove-prop-types": "^0.2.10",
-    "babel-plugin-transform-runtime": "^6.3.13",
-    "babel-polyfill": "^6.16.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.3.13",
-    "babel-preset-stage-1": "^6.3.13",
-    "babel-runtime": "^6.18.0",
-    "chai": "^3.5.0",
-    "chai-as-promised": "^6.0.0",
-    "chai-enzyme": "^0.6.0",
-    "chalk": "^1.1.3",
-    "circular-json": "^0.3.1",
-    "connect-history-api-fallback": "^1.1.0",
-    "css-loader": "^0.26.0",
-    "cssnano": "^3.8.0",
-    "debug": "^2.2.0",
-    "dirty-chai": "^1.2.2",
-    "enzyme": "^2.0.0",
+  "devDependencies": {
     "eslint": "^3.8.1",
     "eslint-config-ta": "^5.2.0",
-    "express": "^4.13.4",
-    "extract-text-webpack-plugin": "^1.0.0",
-    "figures": "^2.0.0",
-    "file-loader": "^0.9.0",
-    "fs-promise": "^1.0.0",
-    "fs-readdir-recursive": "^1.0.0",
-    "html-webpack-plugin": "^2.24.0",
-    "imports-loader": "^0.6.5",
-    "interpret": "^1.0.1",
-    "json-loader": "^0.5.4",
-    "karma": "^1.3.0",
-    "karma-coverage": "^1.1.1",
-    "karma-mocha": "^1.2.0",
-    "karma-mocha-reporter": "^2.0.0",
-    "karma-phantomjs-launcher": "^1.0.0",
-    "karma-webpack-with-fast-source-maps": "^1.9.2",
-    "leven": "^2.0.0",
-    "liftoff": "^2.3.0",
-    "lodash": "latest",
-    "mocha": "^3.1.2",
-    "node-sass": "^3.11.2",
-    "phantomjs-prebuilt": "^2.1.3",
-    "postcss-loader": "^1.0.0",
-    "require-dir": "^0.3.1",
-    "sass-loader": "^4.0.2",
-    "semver": "^5.3.0",
-    "sinon": "^1.17.3",
-    "sinon-chai": "^2.8.0",
-    "style-loader": "^0.13.0",
-    "update-notifier": "^1.0.2",
-    "v8flags": "^2.0.11",
-    "webpack": "^1.13.3",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.6.0",
-    "webpack-validator": "^2.2.9",
-    "yargs": "^6.3.0"
-  },
-  "devDependencies": {
-    "greenkeeper-postpublish": "^1.0.1",
-    "react": "^15.4.1",
-    "react-addons-test-utils": "^15.4.1",
-    "react-dom": "^15.4.1",
     "ta-scripts": "^2.5.2"
   },
-  "peerDependencies": {
-    "react": ">=15",
-    "react-addons-test-utils": ">=15"
+  "dependencies": {
+    "chalk": "^1.1.3",
+    "circular-json": "^0.3.1",
+    "debug": "^2.2.0",
+    "figures": "^2.0.0",
+    "fs-promise": "^1.0.0",
+    "genesis-core": "https://github.com/technologyadvice/genesis-core",
+    "leven": "^2.0.0",
+    "liftoff": "^2.3.0",
+    "lodash": "^4.17.3",
+    "semver": "^5.3.0",
+    "update-notifier": "^1.0.2",
+    "v8flags": "^2.0.11",
+    "yargs": "^6.3.0"
   }
 }
